--- a/manifest.json
+++ b/manifest.json
@@ -5,12 +5,42 @@
     {
       "src": "/images/favicon.svg",
       "type": "image/svg+xml",
-      "sizes": "1000x1000"
+      "sizes": "27x18"
+    },
+    {
+      "src": "/images/36.png",
+      "type": "image/png",
+      "sizes": "36x36"
+    },
+    {
+      "src": "/images/48.png",
+      "type": "image/png",
+      "sizes": "48x48"
+    },
+    {
+      "src": "/images/72.png",
+      "type": "image/png",
+      "sizes": "72x72"
+    },
+    {
+      "src": "/images/96.png",
+      "type": "image/png",
+      "sizes": "96x96"
+    },
+    {
+      "src": "/images/144.png",
+      "type": "image/png",
+      "sizes": "144x144"
     },
     {
       "src": "/images/192.png",
       "type": "image/png",
       "sizes": "192x192"
+    },
+    {
+      "src": "/images/384.png",
+      "type": "image/png",
+      "sizes": "384x384"
     },
     {
       "src": "/images/512.png",
@@ -23,5 +53,5 @@
   "theme_color": "#020618",
   "display": "standalone",
   "scope": "/",
-  "description": "Avoid compliance risks, save QA time and empower your call center with AI-driven evaluations, insights, and coaching."
+  "description": "Our mission is to revolutionize call quality assurance with AI. We built the all-in-one platform for contact centers — Audits, Coaching, Reports, and Real-Time Insights."
 }
